--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- El título ahora viene del "front matter" del artículo -->
     <title>{{ page.title }} - {{ site.title }}</title>
-    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-84DC30PSWQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-84DC30PSWQ');
+</script>
     <!-- Cargamos Tailwind y las fuentes (igual que antes) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
